--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .navbar-brand {
   font-size: 28px;
   cursor: pointer;
@@ -29,7 +33,7 @@
 .jumbotron-items-header {
   display: flex;
   flex-direction: column;
-  margin-top: 110px;
+  margin-top: 120px;
 }
 
 .page-slogan {
