--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-body {
-  overflow-x: hidden;
-}
-
 .navbar-brand {
   font-size: 28px;
   cursor: pointer;
@@ -22,7 +18,7 @@ body {
 }
 
 .page-jumbotron {
-  height: 600px;
+  height: 520px;
   background-image: linear-gradient(to top, rgba(216, 218, 223, 0.52), rgba(36, 23, 33, 0.73)), url('https://wallpaperaccess.com/full/1126911.jpg');
   background-repeat: no-repeat;
   background-position: center;
@@ -33,13 +29,13 @@ body {
 .jumbotron-items-header {
   display: flex;
   flex-direction: column;
-  margin-top: 120px;
+  margin-top: 100px;
 }
 
 .page-slogan {
   color: white;
   font-weight: 600;
-  margin: 0 auto;
+  margin: 10px auto;
   text-align: center;
   width: 95%;
 }
@@ -51,7 +47,7 @@ body {
 .search-form {
   margin: 0 auto;
   width: 95%;
-  height: 150px;
+  height: 180px;
   padding: 10px;
   background: #d9d5d5;
   opacity: 0.8;
@@ -106,14 +102,11 @@ body {
 .advertisement {
   padding: 30px;
   text-align: center;
+  height: 290px;
 }
 
 .find-home-desc {
   margin: 20px 0px;
-}
-
-.find-home-button {
-  margin: 10px 0px 50px 0px;
 }
 
 .bg-color-yellow {
@@ -147,10 +140,10 @@ body {
   color: #21a0d2;
 }
 
-.find-home-header {
-  margin-top: 20px;
+.card {
+  height: 250px;
 }
 
-.find-home-desc {
-  font-size: 16px;
+.find-home-header {
+  margin-top: 40px;
 }
