jumbotron complete for sm screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ body {
   font-weight: 600;
   margin: 10px auto;
   text-align: center;
-  width: 95%;
+  width: 100%;
 }
 
 .form-holder {
@@ -62,9 +62,17 @@ body {
   margin-bottom: 30px;
 }
 
+.page-slogan-sm {
+  color: white;
+  font-weight: 600;
+  margin: 10px auto;
+  text-align: center;
+  width: 75%;
+}
+
 .search-form-sm {
   margin: 0 auto;
-  width: 60%;
+  width: 70%;
   height: 150px;
   padding: 10px 20px;
   background: #d9d5d5;
