--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Roboto Condensed", sans-serif;
-  background-color: #f4f5f6;
+  background-color: ##ffffff;
   overflow-x: hidden;
 }
 
@@ -43,16 +43,21 @@ body {
   font-weight: 600;
   margin: 10px auto;
   text-align: center;
-  width: 100%;
+  width: 96%;
 }
 
-.form-holder {
+.form-holder, .form-holder-md {
   position: relative;
+}
+
+.form-holder-md {
+  width: 80%;
+  margin: 10px auto;
 }
 
 .search-form {
   margin: 0 auto;
-  width: 95%;
+  width: 90%;
   height: 180px;
   padding: 10px;
   background: #d9d5d5;
@@ -73,13 +78,39 @@ body {
 .search-form-sm {
   margin: 0 auto;
   width: 70%;
-  height: 150px;
   padding: 10px 20px;
   background: #d9d5d5;
   opacity: 0.8;
   border-radius: 5px;
   margin-top: 10px;
   margin-bottom: 30px;
+}
+
+.page-slogan-md {
+  color: white;
+  font-weight: 600;
+  margin: 10px auto;
+  text-align: center;
+  width: 80%;
+}
+
+.search-form-md {
+  margin: 0 auto;
+  height: 140px;
+  padding: 10px 20px;
+  background: #d9d5d5;
+  opacity: 0.8;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.searchField-md {
+  position: absolute;
+  width: 94%;
+  top: 70px;
+  left: 3%;
+  z-index: 1;
 }
 
 .font-weight-600 {
@@ -91,10 +122,10 @@ body {
   color: white;
   position: absolute;
   top: 100px;
-  width: 90%;
+  width: 80%;
   padding: 10px;
-  left: 5%;
-  right: 5%;
+  left: 10%;
+  right: 10%;
   z-index: 1;
   outline: none;
 }
@@ -190,7 +221,22 @@ body {
   font-weight: 600;
   color: floralwhite;
   padding: 0px 5px;
-  cursor: pointer;;
+  cursor: pointer;
+  margin: 0px;
+}
+
+.footer-list-sm li {
+  display: inline;
+  font-weight: 600;
+  color: floralwhite;
+  padding: 0px 10px;
+  cursor: pointer;
+  border-right: 2px solid gray;
+  margin: 0px;
+}
+
+.footer-list-sm li:last-child {
+  border-right: none;
 }
 
 .subscribe-textbox {
@@ -207,4 +253,9 @@ body {
 
 .border-gray {
   border-bottom: 1px solid gray !important;
+}
+
+.card-body {
+  width: 350px;
+  margin: 0px auto;
 }
