--- a/styles/style.css
+++ b/styles/style.css
@@ -293,11 +293,14 @@ body {
 
 .advert-images {
   height: 80%;
-  width: 70%;
   border-radius: 50%;
   position: absolute;
   top: 10%;
   left: 10%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 420px) {
