--- a/styles/style.css
+++ b/styles/style.css
@@ -325,6 +325,34 @@ body {
   background-color: #e1e8ee;
 }
 
+.search-results-item {
+  cursor: pointer;
+  background: linear-gradient(to top,rgba(31, 31, 32, 0.52), rgba(47, 46, 47, 0.73));
+  position: relative;
+  color: white;
+}
+
+.search-results-item .card-img {
+  opacity: 0.5;
+}
+
+.search-results-item .card-img:hover {
+  opacity: 1;
+}
+
+.search-results-item:hover {
+  color: #000000;
+}
+
+.result-item-name {
+  position: absolute;
+  top: 25%;
+  z-index: 1;
+  width: 100%;
+  text-align: center;  
+  font-weight: 600;
+}
+
 @media screen and (max-width: 420px) {
    .card-body {
      width: 100%;
